<resources>
    <string name="app_name">EchoWall</string>

    <!--    main bottom menu-->
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="notification">Notification</string>
    <string name="me">Me</string>
    <!--    OnboardingActivity-->
    <!--    login page-->
    <string name="user_name_hint">username</string>
    <string name="login">Start Session</string>
    <string name="error_user_name">Empty User Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="reset_password">FORGOT PASSWORD? <b>GET NEW!</b></string>
    <string name="register">DON\'T HAVE AN ACCOUNT? <b>SIGN UP!</b></string>
    <string name="sign_in_with">SIGN IN WITH</string>
    <string name="or">OR</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="invalid_password_error">Password must be at least 6 characters</string>
    <!--    MeFragment-->
    <string name="debug">Debug</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->



</resources>